k8s/overlays/local/application/ingresses/ingress-symfony.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-ingress
  namespace: symfony-ns
  annotations:
    # Habilitar sticky sessions con cookie
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "SYMFONY_SERVER"
    # Duración de la cookie (2 días en segundos)
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"

    # Health check
    nginx.ingress.kubernetes.io/healthcheck-path: /health
    nginx.ingress.kubernetes.io/healthcheck-interval-seconds: "10"
    nginx.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    nginx.ingress.kubernetes.io/healthy-threshold-count: "2"
    nginx.ingress.kubernetes.io/unhealthy-threshold-count: "2"

    nginx.ingress.kubernetes.io/group.name: "main"
    nginx.ingress.kubernetes.io/group.order: "2"
spec:
  ingressClassName: nginx
  rules:
    - host: symfony.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
# Para que funcione, hay que habilitar el addon de ingress en minikube: minikube addons enable ingress
# Luego, hay que añadir la siguiente línea al archivo /etc/hosts de tu máquina local:
# 192.168.49.2 symfony.local
